Fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   height: 100%;
 }
 
-[data-reactroot] {
+#root > div {
   width: 100%;
   height: 100%;
   overflow-y: auto;
